--- a/.github/workflows/pull-request-react-bun.yaml
+++ b/.github/workflows/pull-request-react-bun.yaml
@@ -80,3 +80,14 @@ jobs:
       - name: Build check
         working-directory: ${{ inputs.working-directory }}
         run: ${{ inputs.build-command }}
+      - name: Install lcov
+        run: |
+          sudo apt-get update 
+          sudo apt-get install lcov
+      - name: Report code coverage
+        uses: zgosalvez/github-actions-report-lcov@v4
+        with:
+          coverage-files: coverage/lcov.*.info
+          minimum-coverage: 0
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          update-comment: true
