ci: update code coverage file pattern in pull-request-bun workflow

--- a/.github/workflows/pull-request-bun.yaml
+++ b/.github/workflows/pull-request-bun.yaml
@@ -98,7 +98,7 @@ jobs:
       - name: Report code coverage
         uses: zgosalvez/github-actions-report-lcov@v4
         with:
-          coverage-files: coverage/lcov.info
+          coverage-files: coverage/*lcov.info*
           minimum-coverage: 0
           github-token: ${{ secrets.GITHUB_TOKEN }}
           update-comment: true
