--- a/.github/workflows/code-coverage-kotlin.yaml
+++ b/.github/workflows/code-coverage-kotlin.yaml
@@ -117,7 +117,7 @@ jobs:
     needs:
       - setup
       - generate-coverage-report
-    runs-on: ubuntu-latest
+    runs-on: linux-x64
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
