--- a/.github/workflows/code-coverage-kotlin.yaml
+++ b/.github/workflows/code-coverage-kotlin.yaml
@@ -127,6 +127,9 @@ jobs:
           authkey: ${{ secrets.TAILSCALE_AUTHKEY }}
           hostname: "GithubActions"
           args: "--login-server https://headscale.monta.com --accept-routes"
+      - name: Check if can access Dev Lens
+        run: |
+          curl --retry 3 --retry-delay 5 --retry-all-errors -f -s -o /dev/null --max-time 30 https://dev-lens.vpn.staging.monta.app/health
       - name: Download coverage report
         id: download-coverage
         uses: actions/download-artifact@v4
