--- a/.github/workflows/code-coverage-kotlin.yaml
+++ b/.github/workflows/code-coverage-kotlin.yaml
@@ -106,7 +106,7 @@ jobs:
         uses: monta-app/github-workflows/.github/actions/gradle-multi-module@v3
         with:
           gradle-module: ${{ inputs.gradle-module }}
-          gradle-tasks: "koverXmlReport"
+          gradle-tasks: "test koverXmlReport"
       - name: Upload coverage report
         uses: actions/upload-artifact@v4
         with:
