--- a/.github/workflows/pull-request-bun.yaml
+++ b/.github/workflows/pull-request-bun.yaml
@@ -79,12 +79,23 @@ jobs:
           interval=2
           end=$((SECONDS + timeout))
           
+          containers=$(docker compose -f ${{ inputs.docker-compose-path }} ps -q)
+          
           while [ $SECONDS -lt $end ]; do
-            unhealthy=$(docker compose -f ${{ inputs.docker-compose-path }} ps --format json | jq '[.[] | select(.Health != null and .Health != "healthy")] | length')
-            if [ "$unhealthy" -eq "0" ]; then
+            unhealthy=0
+          
+            for container in $containers; do
+              health=$(docker inspect --format='{{.State.Health.Status}}' "$container" 2>/dev/null || echo "none")
+              if [ "$health" != "healthy" ]; then
+                unhealthy=$((unhealthy + 1))
+              fi
+            done
+          
+            if [ "$unhealthy" -eq 0 ]; then
               echo "All containers are healthy."
               exit 0
             fi
+          
             sleep $interval
           done
           
