ci: use `uv` for running pytest in component test workflow

--- a/.github/workflows/component-test-python.yaml
+++ b/.github/workflows/component-test-python.yaml
@@ -79,7 +79,7 @@ jobs:
       - name: Run tests with pytest
         id: pytest
         run: |
-          pytest ${{ inputs.test-directory }} \
+          uv run pytest ${{ inputs.test-directory }} \
             --junit-xml=pytest-report.xml \
             --html=pytest-report.html \
             --self-contained-html \
