--- a/.github/workflows/deploy-kotlin.yml
+++ b/.github/workflows/deploy-kotlin.yml
@@ -85,7 +85,7 @@ permissions:
 jobs:
   initialize:
     name: Initialize
-    uses: ./.github/workflows/component-initialize.yaml
+    uses: ./.github/workflows/component-initialize.yml
     with:
       service-name: ${{ inputs.service-name }}
       service-emoji: ${{ inputs.service-emoji }}
@@ -94,7 +94,7 @@ jobs:
   test:
     name: Test
     needs: initialize
-    uses: ./.github/workflows/component-test-kotlin.yaml
+    uses: ./.github/workflows/component-test-kotlin.yml
     with:
       runner-size: ${{ inputs.runner-size }}
       service-name: ${{ inputs.service-name }}
@@ -109,7 +109,7 @@ jobs:
   build:
     name: Build
     needs: initialize
-    uses: ./.github/workflows/component-build.yaml
+    uses: ./.github/workflows/component-build.yml
     with:
       runner-size: ${{ inputs.runner-size }}
       stage: ${{ inputs.stage }}
@@ -135,7 +135,7 @@ jobs:
       - initialize
       - test
       - build
-    uses: ./.github/workflows/component-deploy.yaml
+    uses: ./.github/workflows/component-deploy.yml
     with:
       service-name: ${{ inputs.service-name }}
       service-emoji: ${{ inputs.service-emoji }}
