--- a/.github/workflows/component-build.yml
+++ b/.github/workflows/component-build.yml
@@ -89,13 +89,13 @@ jobs:
         uses: actions/checkout@v4
       - name: Get x64 runner name
         id: runner-x64
-        uses: monta-app/github-workflows/.github/actions/runner-size-converter@v3
+        uses: monta-app/github-workflows/.github/actions/runner-size-converter@main
         with:
           runner-size: ${{ inputs.runner-size }}
           architecture: x64
       - name: Get arm64 runner name
         id: runner-arm64
-        uses: monta-app/github-workflows/.github/actions/runner-size-converter@v3
+        uses: monta-app/github-workflows/.github/actions/runner-size-converter@main
         with:
           runner-size: ${{ inputs.runner-size }}
           architecture: arm64
