--- a/.github/workflows/component-deploy.yml
+++ b/.github/workflows/component-deploy.yml
@@ -67,17 +67,17 @@ jobs:
         shell: bash
         working-directory: ./manifests/apps/${{ inputs.service-identifier }}/${{ inputs.stage }}/app
         run: |
-          sed -i "s/tag: .*/tag: ${{ inputs.image-tag }}/" values.yaml
-          sed -i "s/revision: .*/revision: \"${GITHUB_SHA::8}\"/" values.yaml
-          sed -i "s/build: .*/build: ${{ github.run_number }}/" values.yaml
+          sed -i "s/tag: .*/tag: ${{ inputs.image-tag }}/" values.yml
+          sed -i "s/revision: .*/revision: \"${GITHUB_SHA::8}\"/" values.yml
+          sed -i "s/build: .*/build: ${{ github.run_number }}/" values.yml
       - name: Update config
         shell: bash
         working-directory: ./manifests/apps/${{ inputs.service-identifier }}/${{ inputs.stage }}/cluster
         run: |
           # Update previousHash
-          previousHash=$(yq e .currentHash config.yaml) yq e '.previousHash = strenv(previousHash)' -i config.yaml
+          previousHash=$(yq e .currentHash config.yml) yq e '.previousHash = strenv(previousHash)' -i config.yml
           # Update currentHash
-          currentHash=${GITHUB_SHA::8} yq e '.currentHash = strenv(currentHash)' -i config.yaml
+          currentHash=${GITHUB_SHA::8} yq e '.currentHash = strenv(currentHash)' -i config.yml
       - name: Commit to manifest repository
         working-directory: './manifests'
         run: |
