--- a/.github/workflows/component-deploy.yml
+++ b/.github/workflows/component-deploy.yml
@@ -75,9 +75,9 @@ jobs:
         working-directory: ./manifests/apps/${{ inputs.service-identifier }}/${{ inputs.stage }}/cluster
         run: |
           # Update previousHash
-          previousHash=$(yq e .currentHash config.yml) yq e '.previousHash = strenv(previousHash)' -i config.yml
+          previousHash=$(yq e .currentHash config.yaml) yq e '.previousHash = strenv(previousHash)' -i config.yaml
           # Update currentHash
-          currentHash=${GITHUB_SHA::8} yq e '.currentHash = strenv(currentHash)' -i config.yml
+          currentHash=${GITHUB_SHA::8} yq e '.currentHash = strenv(currentHash)' -i config.yaml
       - name: Commit to manifest repository
         working-directory: './manifests'
         run: |
