--- a/.github/workflows/code-coverage-kotlin.yaml
+++ b/.github/workflows/code-coverage-kotlin.yaml
@@ -110,7 +110,7 @@ jobs:
       - name: Upload coverage report
         uses: actions/upload-artifact@v4
         with:
-          name: coverage-report
+          name: coverage-report${{ inputs.gradle-module }}
           path: ${{ inputs.kover-report-path }}
           retention-days: 1
   push-coverage-to-server:
@@ -128,7 +128,7 @@ jobs:
         id: download-coverage
         uses: actions/download-artifact@v4
         with:
-          name: coverage-report
+          name: coverage-report${{ inputs.gradle-module }}
       - name: Set coverage report path
         id: coverage-path
         run: |
